Updated pom files to load configuration files through java properties