@@ -90,7 +90,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>-Xmx2048m</argLine>
+					<argLine>-Xmx4096m -XX:MaxPermSize=256M</argLine>
+					<systemPropertyVariables>
+						<java.security.policy>${project.build.testOutputDirectory}/proactive.security.policy</java.security.policy>
+						<log4j.configuration>file:${project.build.testOutputDirectory}/log4j.xml</log4j.configuration>
+						<logback.configurationFile>file:${project.build.testOutputDirectory}/logback-test.xml</logback.configurationFile>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 		</plugins>
